# book_review

./: pyproject.toml
config/: settings.py  urls.py
reviewsapp/: apps.py  models.py  urls.py  utils.py  views.py
reviewsapp/management/commands/: loadcsv.py
reviewsapp/migrations/: 0001_initial.py
reviewsapp/templates/: base.html
reviewsapp/templates/reviewsapp/: books_list.html
templates/: base.html
