[tool.poetry]
name = "book-review"
version = "0.1.0"
description = "book review"
authors = ["jshuckbot <gorka_ivan@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
pillow = "^10.1.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.1"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
